--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -7,15 +7,21 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
     - name: Build Docker
       run: |
         docker build -t renaneiras/meu-app:${{ github.sha }} .
         docker push renaneiras/meu-app:${{ github.sha }}
     - name: Update YAML with New Image
       run: |
-        sed -i 's|image: .*$|image: renaneiras/meu-app:${{ github.sha }}|' k8s/app-deployment.yaml
+        # Usa sed mais seguro pra substituir só a image, ignorando comentários
+        sed -i "s|image: .*|image: renaneiras/meu-app:${{ github.sha }}|g" k8s/app-deployment.yaml
         git config user.name "Renan"
         git config user.email "renann.eiras@gmail.com"
         git add k8s/app-deployment.yaml
-        git commit -m "Update image to ${{ github.sha }}"
+        git commit -m "Update image to ${{ github.sha }}" || echo "No changes to commit"
         git push
