Fix formatting issue in app-service.yaml by removing trailing character from targetPort comment.

--- a/devops/app-service.yaml
+++ b/devops/app-service.yaml
@@ -8,5 +8,5 @@ spec:
   ports:
   - protocol: TCP
     port: 80  # Porta externa
-    targetPort: 3000  # Porta do pod
+    targetPort: 3000  # Porta do pod¬
   type: LoadBalancer  # Expõe pro mundo
