--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
   "scripts": {
     "start": "node server.js"
   },
-  "keywords": ["kubernetes", "docker", "nodejs"],
+  "keywords": [
+    "kubernetes",
+    "docker",
+    "nodejs"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "newrelic": "^13.5.0"
   }
 }
-
