--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "newrelic": "^13.5.0"
+    "newrelic": "^13.5.0",
+    "winston": "^3.11.0",
+    "@newrelic/winston-enricher": "^4.0.0"
   }
 }
