Remove unused import from newrelic.js and update app-deployment.yaml to use secret for New Relic license key.

--- a/devops/app-deployment.yaml
+++ b/devops/app-deployment.yaml
@@ -20,7 +20,7 @@ spec:
         - name: NEW_RELIC_APP_NAME
           value: "k8s-app"
         - name: NEW_RELIC_LICENSE_KEY
-          value: "b4f962a57a224623c28eca7b518a7b0dFFFFNRAL"
+          value: ${{ secrets.NEW_RELIC_LICENSE_KEY }}
         - name: NEW_RELIC_LOG
           value: "stdout"
         - name: NEW_RELIC_LOG_LEVEL
